<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fit Water</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="pref_category_reminders">Reminders</string>
    <string name="pref_reminder_state_title">Enable reminder notifications</string>
    <string name="pref_reminder_state_summary">If enabled, Fit Water will remind you to drink water during your day.</string>
    <string name="pref_reminder_frequency_title">Reminder frequency</string>
    <string name="pref_category_fitbit">FitBit account</string>
    <string name="pref_fitbit_title">Change FitBit account</string>
    <string name="pref_fitbit_summary">Discard current FitBit account data and set up a different one.</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_reminder_sound_title">Reminder sound</string>
    <string name="title_activity_oauth_callback">Setting up FitBit account connection..</string>
    <string name="goal_label">Your daily intake goal is</string>
    <string name="goal_loading_label">Loading your goal..</string>
    <string name="goal_value">%dml</string>
    <string name="todays_intake">Today\'s intake is %dml</string>
    <string name="refresh">Refresh</string>

    <string-array name="pref_reminder_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_reminder_frequency_values">
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>
</resources>
